# codewars-cli

./: LICENSE  README.md  pyproject.toml
codewars_cli/: __init__.py  attempt.py  consts.py  helpers.py  practice.py  submit.py  test.py  train.py
