[tool.poetry]
name = "codewars-cli"
version = "0.1.0"
description = "An unofficial CLI for CodeWars"
authors = ["Kappa <f.cappetti.05@gmail.com>"]
readme = "README.md"
packages = [{include = "codewars_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
cloudscraper = "^1.2.66"
click = "^8.1.3"
toml = "^0.10.2"
bs4 = "^0.0.1"
rich = "^12.6.0"

[tool.poetry.scripts]
codewars-cli = "codewars_cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
